同步, lhasa仍无html生成

--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 54 个博客、9053 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 54 个博客、9057 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
-<li><a href=blog.forecho.com/%E4%BD%BF%E7%94%A8%20Topstep.html>2025-06-11 使用 Topstep</a></li>
+<li><a href=codeinchinese.com/%E7%94%A8%E6%9C%88%E5%85%94%E8%AF%AD%E8%A8%80%E7%BC%96%E5%86%99%E7%8C%9C%E6%95%B0%E5%AD%97%E2%80%94%E2%80%94%E5%87%BA%E5%B8%88%E6%9C%AA%E6%8D%B7.mbt.html>2025-06-13 用月兔语言编写猜数字——出师未捷.mbt</a></li>
+
+<li><a href=www.cnfeat.com/%E4%B8%AA%E4%BA%BA%E5%A5%BD%E7%89%A9%E6%8E%A8%E8%8D%90%EF%BC%882025%E5%B9%B46%E6%9C%88%E6%9B%B4%E6%96%B0%EF%BC%89.html>2025-06-12 个人好物推荐（2025年6月更新）</a></li>
+
+<li><a href=blog.forecho.com/%E4%BD%BF%E7%94%A8%20Topstep%20%E4%BA%A4%E6%98%93%E6%9C%9F%E8%B4%A7.html>2025-06-11 使用 Topstep 交易期货</a></li>
 
 <li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%95%E5%88%A4%E6%96%AD%E4%BD%A0%E7%9C%9F%E6%AD%A3%E6%8B%A5%E6%9C%89%E4%BA%86%E4%B8%AA%E4%BA%BA%E7%94%9F%E4%BA%A7%E5%8A%9B%EF%BC%9F.html>2025-06-10 如何判断你真正拥有了个人生产力？</a></li>
 
@@ -46,6 +50,8 @@
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202521%20%E7%A4%BC%E7%89%A9%202.html>2025-05-29 父范学堂 2521 礼物 2</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202521%20%E8%AE%AD%E7%BB%83%E7%AC%AC%2016%20%E5%91%A8%EF%BC%8C%E8%B5%9B%E5%89%8D%E6%9C%80%E5%90%8E%E4%B8%80%E6%AC%A1%E8%83%8C%E9%9D%A0%E8%83%8C.html>2025-05-29 折返点 2521 训练第 16 周，赛前最后一次背靠背</a></li>
+
+<li><a href=codeinchinese.com/%E3%80%8ALaws%20of%20UX%E3%80%8B%E9%80%89%E6%91%98.html>2025-05-27 《Laws of UX》选摘</a></li>
 
 <li><a href=jerkwin.github.io/m3u8%E5%9C%A8%E7%BA%BF%E8%A7%86%E9%A2%91%E4%B8%8B%E8%BD%BD%E4%B8%8E%E4%BF%AE%E6%AD%A3.html>2025-05-27 m3u8在线视频下载与修正</a></li>
 
@@ -100,6 +106,8 @@
 <li><a href=sakurawald.github.io/fix-nvidia-drm-issues.html>2025-05-07 fix-nvidia-drm-issues</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202518%20%E8%98%91%E8%8F%87%E4%B8%8E%E9%92%88%E7%81%B8.html>2025-05-07 父范学堂 2518 蘑菇与针灸</a></li>
+
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20Rose%20%E7%9A%84%20MTR.html>2025-05-07 价格行为学 - Rose 的 MTR</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20Rose%20%E7%9A%84%20Gap%20Bar.html>2025-05-07 价格行为学 - Rose 的 Gap Bar</a></li>
 
@@ -3299,7 +3307,7 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202237%EF%BD%9CFCS%205K%20%E8%AE%AD%E7%BB%83%E8%AE%B0%EF%BC%88%E4%B8%89%EF%BC%89.html>2022-09-19 折返点 2237｜FCS 5K 训练记（三）</a></li>
 
-<li><a href=www.cnfeat.com/%E5%85%8D%E8%B4%B9%E9%A2%86%E5%8F%96%E6%96%B0%E7%89%88%E3%80%8A%E7%AC%A8%E6%96%B9%E6%B3%95%E6%96%87%E5%8C%96%E6%89%8B%E5%86%8C%E3%80%8B%2C10%E4%B8%87%2B%E5%AD%97250%E9%A1%B5%2C%E6%9B%B4%E6%9C%89%E9%A2%9D%E5%A4%96%E7%A6%8F%E5%88%A9%E2%80%A6%E2%80%A6.html>2022-09-19 免费领取新版《笨方法文化手册》,10万+字250页,更有额外福利……</a></li>
+<li><a href=www.cnfeat.com/%E3%80%8A%E7%AC%A8%E6%96%B9%E6%B3%95%E6%96%87%E5%8C%96%E6%89%8B%E5%86%8C%E3%80%8B5%E5%B9%B414%E4%B8%87%E5%AD%97%EF%BC%8C%E5%8A%A9%E4%BD%A0%E4%BB%8E0%E5%88%B01%E6%9E%84%E5%BB%BA%E9%95%BF%E6%9C%9F%E4%B8%BB%E4%B9%89%E8%80%85%E7%9A%84%E4%BA%BA%E7%94%9F%E6%88%90%E9%95%BF%E7%B3%BB%E7%BB%9F.html>2022-09-19 《笨方法文化手册》5年14万字，助你从0到1构建长期主义者的人生成长系统</a></li>
 
 <li><a href=jerkwin.github.io/%E5%85%B3%E4%BA%8E%E5%88%86%E5%AD%90%E5%8A%A8%E5%8A%9B%E5%AD%A6%E6%A8%A1%E6%8B%9F%E7%9A%84%E5%8F%AF%E9%87%8D%E5%A4%8D%E6%80%A7.html>2022-09-19 关于分子动力学模拟的可重复性</a></li>
 
