--- a/blog.forecho.com/价格行为学 TradingView 指标介绍.html
+++ b/blog.forecho.com/价格行为学 TradingView 指标介绍.html
@@ -16,12 +16,14 @@
 </ul>
 <p>默认三个均线粗细是一样的，我自己手动改了黄色均线的配置，加粗了。因为它是最重要的均线。</p>
 <h3>价格线</h3>
-<p><img alt="" src="https://img.forecho.com/s7TtOD.png"/></p>
+<p><img alt="" src="https://img.forecho.com/m5e1hw.png"/></p>
+<p>默认的线没有文字，可以修改配置把 「Hide Labels」 勾选去掉，就会显示文字。</p>
 <ul>
-<li>图中 1 蓝色线：当天的开盘价</li>
-<li>图中 2/3 灰色线：前一交易日最高价/最低价。</li>
+<li>图中 1 蓝色线 ：<code>ood</code> 是 <code>open of day</code> 的缩写，表示当天的开盘价。</li>
+<li>图中 2/3 灰色线：<code>hoy</code> 是 <code>high of yesterday</code> 的缩写，表示前一交易日最高价。<code>loy</code> 是 <code>low of yesterday</code> 的缩写，表示前一交易日最低价。</li>
+<li>图中 4 红色线：<code>coy</code> 是 <code>close of yesterday</code> 的缩写，表示前一交易日收盘价。</li>
 </ul>
-<p>值得注意的是默认配置的时间统计范围是 8:30 - 14:55（交易所时间）。ES 默认是常规时间是 8:30 - 15:10 的。所以这里的最后三个 k 线是没统计的，目前我不知道为什么默认是这样的。</p>
+<p>值得注意的是默认配置的时间统计范围是 8:30 - 14:55（交易所时间）。ES 默认是常规时间是 8:30 - 15:10 的。所以这里的最后三个 k 线是没统计的。</p>
 <h3>缺口</h3>
 <p><img alt="" src="https://img.forecho.com/dou5j2.png"/></p>
 <p>缺口可以衡量多空双方的力量。</p>
